--- a/snmp.yaml
+++ b/snmp.yaml
@@ -4,6 +4,9 @@ init_config:
 instances:
 
   - ip_address: cisco-router-01-ip-address
+    # enforce_mib_constraints: false # if set to false we will not check the
+                                     # values returned meet the MIB constraints.
+                                     # Solves ValueConstraintError
     community_string: read-only
     tags:
       - cisco-router-01
